Use font-display: swap

--- a/src/views/index.mustache
+++ b/src/views/index.mustache
@@ -7,7 +7,7 @@
         <title>Quotes</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family={{ font }}&text={{ unique_chars }}&subset=latin">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family={{ font }}&text={{ unique_chars }}&subset=latin&display=swap">
 
         <!-- Main CSS. -->
         <style>
@@ -99,7 +99,7 @@
         <footer class="footer">
 
                 <p>
-                    <a id="js-font-link" href="https://fonts.google.com/specimen/{{ font }}">{{ font }}</a> |
+                    Font: <a id="js-font-link" href="https://fonts.google.com/specimen/{{ font }}">{{ font }}</a> |
                     Background: <strong id="js-color-one">#{{ color_one }}</strong> |
                     Text: <strong id="js-color-two">#{{ color_two }}</strong>
                 </p>
