--- a/src/views/index.mustache
+++ b/src/views/index.mustache
@@ -45,7 +45,7 @@
             .footer,
             .button:hover,
             .button.hollow,
-            #js-quote-source{
+            #js-quote-share-link{
                 border-color: #{{ foreground_color }};
             }
 
@@ -90,7 +90,7 @@
             <div class="link-actions">
                 <p>
                     <strong>Like this quote?</strong><br><small>Copy & paste this link to share it!</small><br><br>
-                    <span id="js-quote-source" href="{{ shortQuoteLink }}">{{ shortQuoteLink }}</span>
+                    <span id="js-quote-share-link" href="{{ shareQuoteLink }}">{{ shareQuoteLink }}</span>
                 </p>
             </div>
 
