Don't escape inlined CSS

--- a/src/views/index.mustache
+++ b/src/views/index.mustache
@@ -11,7 +11,7 @@
 
         <!-- Main CSS. -->
         <style>
-            {{ inline_css }}
+            {{{ inline_css }}}
         </style>
 
         <!-- Starting Dynamic CSS. -->
